Model version in first

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -37,21 +37,21 @@
 
                   <!-- Nav tabs -->
                   <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Default</a></li>
-                    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">With model trait</a></li>
+                    <li role="presentation" class="active"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">With model trait</a></li>
+                    <li role="presentation"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Default</a></li>
                   </ul>
 
                   <!-- Tab panes -->
                   <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane active" id="home">
-                         <div class="form-group">
-                            <textarea class="form-control" rows="30">@g._1</textarea>
-                        </div>
-                    </div>
-                    <div role="tabpanel" class="tab-pane" id="profile">
+                    <div role="tabpanel" class="tab-pane active" id="profile">
                         <div class="form-group">
                             <textarea class="form-control" rows="30">@g._2</textarea>
                             <a href="@routes.Assets.at("Model.scala")">Model</a>
+                        </div>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="home">
+                         <div class="form-group">
+                            <textarea class="form-control" rows="30">@g._1</textarea>
                         </div>
                     </div>
                   </div>
